[TEST] Fix failed test cases
